--- a/package.json
+++ b/package.json
@@ -6,10 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
     "mongodb": "^4.8.1",
+    "mongoose": "^7.6.3",
     "next": "latest",
+    "next-auth": "^4.24.4",
+    "passport": "^0.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-awesome-slider": "^4.1.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
