--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "micro-cors": "^0.1.1",
     "mongodb": "^4.8.1",
     "mongoose": "^7.6.3",
     "next": "latest",
