secret key defined

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,5 @@
 MONGODB_URI="mongodb+srv://aryanbaba4199:Aryan7277@cluster0.swtqxeq.mongodb.net/?retryWrites=true&w=majority"
+GOOGLE_CLIENT_ID = 756731840388-5jnr9rqsjs342m753r03ebvjvgvlape0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+NEXT_AUTH_SECRET = "authentication=oauthentication"
+NEXT_AUTH_URI = "http://localhost:3000"
