--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "micro-cors": "^0.1.1",
     "mongodb": "^4.8.1",
