--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ MONGODB_URI = "mongodb+srv://dreamplanner4199:Aryan7277@cluster0.swtqxeq.mongodb
 GOOGLE_CLIENT_ID = "756731840388-5jnr9rqsjs342m753r03ebvjvgvlape0.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
 NEXTAUTH_SECRET = "authenticationUTUGBJKBVHCdsfhsknfkhsGYFYTFYBKJV"
-NEXTAUTH_URL = "https://dp-sand.vercel.app"
+NEXTAUTH_URI = "https://dp-sand.vercel.app"
 
