--- a/package.json
+++ b/package.json
@@ -6,25 +6,39 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^1.5.1",
+    "@heroicons/react": "^2.0.18",
+    "amqplib": "^0.10.3",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
+    "css-loader": "^6.8.1",
     "express": "^4.18.2",
     "micro-cors": "^0.1.1",
-    "mongodb": "^4.8.1",
-    "mongoose": "^7.6.3",
-    "next": "latest",
-    "next-auth": "^4.24.4",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
+    "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-toastify": "^9.1.3"
+    "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
+    "tailwind": "^4.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.5",
-    "@types/react": "16.9.17",
-    "typescript": "4.6.3"
+    "@types/node": "20.10.0",
+    "@types/react": "18.2.38",
+    "autoprefixer": "^10.4.16",
+    "postcss-nesting": "^12.0.1",
+    "postcss-preset-env": "^9.3.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.3.2"
   }
 }
