--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.18",
     "amqplib": "^0.10.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
