--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.14.18",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.15.2",
     "amqplib": "^0.10.3",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
     "css-loader": "^6.8.1",
     "express": "^4.18.2",
+    "firebase": "^10.7.1",
     "micro-cors": "^0.1.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.0.2",
+    "mui": "^0.0.1",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
-    "passport": "^0.6.0",
-    "postcss": "^8.4.31",
+    "passport": "^0.7.0",
+    "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
@@ -35,12 +40,12 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "20.10.0",
-    "@types/react": "18.2.38",
+    "@types/node": "20.10.3",
+    "@types/react": "18.2.42",
     "autoprefixer": "^10.4.16",
     "postcss-nesting": "^12.0.1",
     "postcss-preset-env": "^9.3.0",
-    "tailwindcss": "^3.3.5",
-    "typescript": "5.3.2"
+    "tailwindcss": "^3.3.6",
+    "typescript": "5.3.3"
   }
 }
