--- a/package.json
+++ b/package.json
@@ -6,49 +6,50 @@
     "start": "next start"
   },
   "dependencies": {
-    "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.16.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.15.2",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "amqplib": "^0.10.3",
     "aos": "^2.3.4",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
-    "css-loader": "^6.8.1",
-    "express": "^4.18.2",
-    "firebase": "^10.7.1",
+    "css-loader": "^7.0.0",
+    "express": "^4.19.2",
+    "firebase": "^10.10.0",
     "micro-cors": "^0.1.1",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.0",
     "mui": "^0.0.1",
-    "next": "^14.0.3",
-    "next-auth": "^4.24.5",
-    "next-cloudinary": "^5.20.0",
-    "nodemailer": "^6.9.7",
+    "next": "^14.1.4",
+    "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.4.0",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
-    "postcss": "^8.4.32",
-    "postcss-import": "^15.1.0",
-    "postcss-loader": "^7.3.3",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
+    "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^10.0.5",
     "tailwind": "^4.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "20.10.3",
-    "@types/react": "18.2.42",
-    "autoprefixer": "^10.4.16",
-    "postcss-nesting": "^12.0.1",
-    "postcss-preset-env": "^9.3.0",
-    "tailwindcss": "^3.3.6",
-    "typescript": "5.3.3"
+    "@types/node": "20.12.5",
+    "@types/react": "18.2.74",
+    "autoprefixer": "^10.4.19",
+    "postcss-nesting": "^12.1.1",
+    "postcss-preset-env": "^9.5.4",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.4"
   }
 }
